# tsunami

./: .gitignore  .mcp.json  404.html  CLAUDE.md  Cargo.toml  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  release.yml
api/engine/: index.html
api/predicate/: index.html
api/time_parse/: index.html
design-doc/: index.html
docs/: design-doc.md  getting-started.md  index.md
docs/api/: engine.md  predicate.md  time_parse.md
docs/guide/: cli.md  mcp.md  predicates.md  python.md
getting-started/: index.html
guide/cli/: index.html
guide/mcp/: index.html
guide/predicates/: index.html
guide/python/: index.html
python/tsunami/: __init__.py  _engine.pyi  cli.py  predicate.py  server.py  time_parse.py
python/tsunami/lib_engine.dylib.dSYM/Contents/: Info.plist
python/tsunami/lib_engine.dylib.dSYM/Contents/Resources/Relocations/aarch64/: lib_engine.dylib.yml
search/: search_index.json
src/: lib.rs  predicate.rs  query.rs  summarise.rs
tests/: test_engine.py  test_predicate.py  test_time_parse.py
tests/fixtures/: arbiter.fst
