[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "tsunami"
version = "0.1.0"
description = "AI-assisted hardware waveform debugging tool"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
tsunami = "tsunami.cli:main"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "tsunami._engine"

[tool.pytest.ini_options]
testpaths = ["tests"]
