[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "tsunami-wave"
version = "0.2.0"
description = "AI-assisted hardware waveform debugging tool"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "maturin>=1.7,<2.0",
]
docs = [
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.27",
]

[project.scripts]
tsunami = "tsunami.cli:main"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "tsunami._engine"

[tool.pytest.ini_options]
testpaths = ["tests"]
